# cl-p2p-setup

./: .gitignore  Cargo.toml  README.md  trace.txt
src/: chain.rs  config.rs  discovery.rs  enr.rs  main.rs  peer_manager.rs  utils.rs
src/rpc/: handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs
src/rpc/codec/: base.rs  mod.rs  ssz_snappy.rs
