[package]
name = "cl-p2p-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full", "rt-multi-thread", "time","macros"] }
libp2p =  { version = "0.50.0", features = ["full", "tcp", "dns", "async-std", "websocket", "tokio"] }
discv5 = { version = "0.1.0", features = ["libp2p"] }